blog (parsed markdown) css

--- a/articles/202210/20221005_0.md
+++ b/articles/202210/20221005_0.md
@@ -1,2 +1,90 @@
-# 20221005_0
+# マークダウンブログサンプル
 ***
+  
+# h1 
+## h2
+### h3
+#### h4
+##### h5
+###### h6
+
+Underline H1
+===
+
+Undeline H2
+---
+
+
+  
+  
+  
+_em_
+*em*
+  
+__strong__
+**strong**
+  
+  
+~~打ち消し線~~
+  
+
+`single line code block`
+<br/>
+``` swift
+val a = "a"
+let b = "b"
+```
+
+  
+```javascript
+const modelViewPath = "/pages/3dmodel.html";
+const softwareViewPath = "/pages/software.html";
+const socialViewPath = "/pages/social.html";
+const blogViewPath = "/pages/blog.html";
+
+var viewStack = [];
+
+document.addEventListener("DOMContentLoaded", function () {
+    initHamburger();
+    initTransition();
+    transition(indexViewPath, null);
+});
+
+window.addEventListener("popstate", (e) => {
+    pop();
+});
+
+window.onload = async () => {
+    await markdown.ready;
+};
+```
+  
+  
+| table | head | head2 |head2 |head2 |
+|:---|:---|:---|:---|:---|
+| t  | a  | b  | l  | e  |
+  
+  
+- list
+  - in
+    - in in
+- list list
+
+<br/>
+  
+> quote aaa
+
+> quote 2 lines
+> aaa bbb cc
+
+  
+  
+[Markdown - Wikipedia](https://ja.wikipedia.org/wiki/Markdown "markdown wikipedia")
+
+<https://ja.wikipedia.org/wiki/Markdown>
+
+&copy;
+
+  
+  
+![image image](../../static/resources/images/1.png)
